--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-portal": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "leva": "0.9.35",
     "lucide-react": "0.451.0",
     "next": "14.2.14",
     "react": "^18",
@@ -26,5 +28,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "leva": {
+      "@radix-ui/react-portal": "1.0.2"
+    }
   }
 }
