--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-portal": "1.0.2",
+    "@radix-ui/react-slot": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "leva": "0.9.35",
     "lucide-react": "0.451.0",
     "next": "14.2.14",
+    "next-themes": "0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "2.5.3",
