--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@base_ui/react": "1.0.0-alpha.3",
     "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-portal": "1.0.2",
     "@radix-ui/react-slot": "1.1.0",
